AC_INIT([DataStructures], [0.1], [baklazanzaglady@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_MACRO_DIRS([m4])

CXXFLAGS="$CXXFLAGS -std=c++17"

AC_PROG_CXX
AC_PROG_CC

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
		Makefile
		src/Makefile
])

AC_OUTPUT
